<resources>
    <string name="app_name">Lights</string>
    <string name="status">Status</string>
    <string name="searching">Seaching..</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="off">Turned Off</string>
    <string name="color">Turned On</string>
    <string name="fading">Fading</string>
    <string name="turnOff">Turn Off</string>
    <string name="on">Turn On</string>
    <string name="chooseColor">Choose Color</string>
    <string name="fadeSettings">Fade Settings</string>
    <string name="sleepTimer">Sleep Timer</string>
    <string name="speed">Speed</string>
    <string name="intensity">Intensity</string>
    <string name="transition">Transition</string>
    <string name="fade">Fade</string>
    <string name="sleep">Sleep</string>
    <string name="savedColor_pref" translatable="false">colorpref</string>
</resources>
